--- a/registry/src/components/Dropdown/index.css
+++ b/registry/src/components/Dropdown/index.css
@@ -102,6 +102,10 @@
   @apply pr-10;
 }
 
+.dropdown-divider {
+  @apply my-1 h-px w-full bg-gray-200;
+}
+
 /* .dropdown-content.text-small .dropdown-group {
   @apply before:text-heading-compact-01 before:gap-2 before:p-2;
 } */
