--- a/registry/src/components/PasswordInput/index.css
+++ b/registry/src/components/PasswordInput/index.css
@@ -1,3 +1,4 @@
+@import '../global.css';
 .eye-btn {
   @apply m-2.5 flex h-5 w-5 items-center justify-center rounded-full p-1 text-gray-500 transition-colors;
 }
