--- a/registry/src/components/Button/index.css
+++ b/registry/src/components/Button/index.css
@@ -1,5 +1,6 @@
 @import '../theme.css';
 @import '../loading-mask.css';
+@import '../global.css';
 
 .btn:not(.hidden) {
   @apply text-body-compact-02 flex h-10 items-center justify-center gap-2 whitespace-nowrap rounded-md px-4 transition-colors duration-300;
