--- a/registry/src/components/Input/index.css
+++ b/registry/src/components/Input/index.css
@@ -1,3 +1,5 @@
+@import '../global.css';
+
 /* Disable default number input arrows on Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
