--- a/registry/src/components/Toast/index.css
+++ b/registry/src/components/Toast/index.css
@@ -1,4 +1,5 @@
 @import '../animation.css';
+@import '../global.css';
 
 .toast-container {
   @apply fixed z-[999] m-4 flex w-[20rem] flex-col justify-end gap-4 !bg-transparent;
