--- a/registry/src/components/global.css
+++ b/registry/src/components/global.css
@@ -1,10 +1,15 @@
-/* tailwindcss import */
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-@import 'tailwindcss/base';
-
-@import './font.css';
+svg.lucide.small {
+  @apply h-3 w-3;
+}
 
 svg.lucide {
-  @apply h-4 w-4;
+  @apply box-border h-4 w-4;
+}
+
+svg.lucide.large {
+  @apply h-5 w-5;
+}
+
+svg.lucide.xlarge {
+  @apply h-6 w-6;
 }
