--- a/registry/src/components/Select/index.css
+++ b/registry/src/components/Select/index.css
@@ -23,4 +23,24 @@
   @apply -scale-y-100;
 }
 
+.select-item {
+  @apply h-full w-full cursor-pointer rounded-md p-3 text-gray-900 first:rounded-t-none hover:bg-gray-100;
+}
+
+.select-item.active {
+  @apply bg-sky-100;
+}
+
+.dropdown.custom-select .dropdown-trigger {
+  @apply h-full w-full rounded-md border border-gray-200 bg-white px-4 text-left text-gray-500 shadow-sm hover:text-gray-700;
+}
+
+.dropdown.custom-select .dropdown-trigger[data-open='true'] {
+  @apply rounded-b-none;
+}
+
+.dropdown.custom-select .dropdown-content {
+  @apply m-0 flex flex-col gap-1 rounded-t-none border border-t-0 border-gray-200 p-1;
+}
+
 /* Select */
