--- a/registry/src/components/Input/index.css
+++ b/registry/src/components/Input/index.css
@@ -87,6 +87,7 @@ input[type='checkbox'] {
   -moz-appearance: none;
   appearance: none;
   border-radius: 0.1875rem;
+  padding: 0;
   min-width: 1rem;
   min-height: 1rem;
   max-width: 1rem;
