--- a/registry/src/components/Checkbox/index.css
+++ b/registry/src/components/Checkbox/index.css
@@ -1,15 +1,5 @@
 /* Checkbox & Radio */
-input[type='checkbox']:checked:disabled {
-  background-color: #c6c6c6;
-  opacity: 0.5;
-}
-
 input[type='checkbox']:disabled {
-  opacity: 0.5;
-}
-
-input[type='radio']:disabled ~ span.input-label,
-input[type='checkbox']:disabled ~ span.input-label {
   opacity: 0.5;
 }
 
@@ -18,7 +8,7 @@ input[type='checkbox'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border-radius: 0.375rem;
+  border-radius: 0.1875rem;
   padding: 0;
   min-width: 1rem;
   min-height: 1rem;
@@ -28,6 +18,10 @@ input[type='checkbox'] {
   position: relative;
   top: 0.125rem;
   background-color: white;
+}
+
+input[type='checkbox']:focus {
+  border-radius: 0.1875rem;
 }
 
 input[type='checkbox']:checked {
@@ -48,7 +42,11 @@ input[type='checkbox']:indeterminate {
 }
 
 .checkbox-wrapper {
-  @apply flex w-fit gap-2;
+  @apply flex w-fit gap-3;
+}
+
+.checkbox-wrapper[aria-disabled='true'] {
+  @apply opacity-50;
 }
 
 .checkbox-wrapper .input-wrapper {
@@ -66,4 +64,13 @@ input[type='checkbox']:indeterminate {
 .input-sublabel {
   @apply text-helper-01 line-clamp-4 w-full select-none  text-gray-500;
 }
+
+.checkbox-group {
+  @apply flex flex-col gap-2;
+}
+
+.checkbox-group.horizontal {
+  @apply flex-row flex-wrap gap-4;
+}
+
 /* Checkbox & Radio */
