--- a/registry/src/components/Checkbox/index.css
+++ b/registry/src/components/Checkbox/index.css
@@ -69,6 +69,10 @@ input[type='checkbox']:indeterminate {
   @apply flex flex-col gap-2;
 }
 
+.checkbox-group-item {
+  @apply flex flex-col gap-2;
+}
+
 .checkbox-group.horizontal {
   @apply flex-row flex-wrap gap-4;
 }
