update: Accordion - improve animation - add icon types - improve props passing - add controller through value props - support generate items by items prop

--- a/registry/src/components/Accordion/index.css
+++ b/registry/src/components/Accordion/index.css
@@ -21,7 +21,7 @@
 }
 
 .accordion-trigger {
-  @apply flex h-14 items-center justify-between text-ellipsis px-4 text-gray-500 hover:text-gray-700;
+  @apply flex h-14 flex-shrink-0 items-center justify-between text-ellipsis px-4 text-gray-500 hover:text-gray-700;
 }
 
 .accordion-item:first-of-type > .accordion-trigger {
@@ -38,11 +38,14 @@
 }
 
 .accordion-trigger-icon {
-  @apply h-4 w-4 rotate-0;
+  @apply h-4 w-4 transition-transform duration-300 ease-in-out;
 }
 
-.accordion-item.active > .accordion-trigger > .accordion-trigger-icon {
-  @apply rotate-180;
+.accordion-item.active > .accordion-trigger > .accordion-trigger-icon.chervon-trigger {
+  transform: rotateX(180deg);
+}
+.accordion-item.active > .accordion-trigger > .accordion-trigger-icon.cross-trigger {
+  @apply rotate-45;
 }
 
 .accordion-trigger.icon-left > .accordion-trigger-text {
@@ -54,13 +57,13 @@
 }
 
 .accordion-content {
-  @apply h-auto overflow-hidden px-4 text-black transition-all duration-300 ease-in-out;
+  @apply text-body-compact-02 flex flex-grow-0 flex-col items-start justify-between gap-4 overflow-hidden px-4 text-black transition-all duration-300 ease-in-out;
 }
 
 .accordion-item.active .accordion-content {
-  @apply text-body-compact-02 flex flex-col items-start justify-between gap-4 pb-4 pt-2;
+  @apply h-auto max-h-[100%] pb-4 pt-2 opacity-100;
 }
 
 .accordion-item:not(.active) .accordion-content {
-  @apply py-0;
+  @apply h-[0] max-h-[0%] py-0 opacity-0;
 }
