change (components): - button: change isLoading to isPending - accordion: remove polymorphic - checkbox: modify treeData types, remove polymorphic in wrapper - radio: remove polymorphic in wrapper

--- a/registry/src/components/Accordion/index.css
+++ b/registry/src/components/Accordion/index.css
@@ -12,11 +12,11 @@
   @apply text-body-compact-02 flex w-full flex-col border-b;
 }
 
-.accordion-item[disabled] {
+.accordion-item[aria-disabled='true'] {
   @apply cursor-not-allowed text-gray-200;
 }
 
-.accordion-item[disabled] button:disabled {
+.accordion-item[aria-disabled='true'] button:disabled {
   @apply cursor-not-allowed text-gray-200;
 }
 
